# Booksapi

./: docker-compose.yml  dockerfile  nginx.conf  pyproject.toml
app/: books.py  main.py  schema.py
