[tool.poetry]
name = "books"
version = "0.1.0"
description = ""
authors = ["ScrollDude <stepakinoyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
requests = "^2.31.0"
fake-useragent = "^1.5.1"
fastapi-cli = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
